# HarnessDevTool

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.yml
.antigravitycli/: aa29cd10-4bb9-4e1a-a964-be924b256130.json
.claude/: settings.json
.claude/agents/: doc-agent.md  frontend.md  qa.md  reviewer.md
.github/workflows/: ci.yml
DEVTOOL - GUI/: Harness DEV TOOL.html  Harness GUI - Paletas.html  Harness GUI v2.html  harness-ssh.jsx
DEVTOOL - GUI(1)/: Harness GUI - Paper Interactive (bundle-src).html  Harness GUI - Paper Interactive (standalone).html  Harness GUI - Paper Interactive.html  harness-agents.jsx  harness-icons.jsx  harness-interactive.jsx  harness-table-v2.jsx  harness-table.jsx  themes-v2.jsx  themes.jsx
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/crates/harness-core/: Cargo.toml
backend/crates/harness-core/schemas/: budget.v1.json  db.connection.v1.json  handoff.v1.json  task.v1.json
backend/crates/harness-core/src/: docs.rs  ids.rs  knowledge.rs  lib.rs  pause.rs  repos.rs  skills.rs
backend/crates/harness-core/src/agents/: mod.rs  registry.rs
backend/crates/harness-core/src/budget/: mod.rs  pricing.rs  reporter.rs
backend/crates/harness-core/src/events/: mod.rs
backend/crates/harness-core/src/roles/: mod.rs
backend/crates/harness-core/src/scheduler/: mod.rs  spawner.rs  tick.rs
backend/crates/harness-core/src/store/: mod.rs
backend/crates/harness-core/src/tasks/: events.rs  ids.rs  index.rs  mod.rs  model.rs  reconcile.rs  state_machine.rs  store.rs
backend/crates/harness-core/src/threads/: mod.rs
backend/crates/harness-mcp-server/: Cargo.toml  SPIKE.md
backend/crates/harness-mcp-server/src/: dispatcher.rs  gateway.rs  main.rs  protocol.rs  tasks_shim.rs
backend/crates/harness-mcp-server/src/tools/: attachments.rs  azure.rs  capabilities.rs  db.rs  docs.rs  evidence.rs  knowledge.rs  ledger.rs  memory.rs  mod.rs  n8n.rs  planning.rs  repo.rs  session.rs  skills.rs  spec.rs  ssh.rs  tasks.rs  toolsets.rs
backend/crates/harness-policy/: Cargo.toml
backend/crates/harness-policy/src/: capability.rs  engine.rs  error.rs  lib.rs  rule.rs
backend/crates/harness-sandbox/: Cargo.toml
backend/crates/harness-sandbox/src/: lib.rs
backend/crates/harness-server/: Cargo.toml
backend/crates/harness-server/src/: app.rs  approvals.rs  audit.rs  auth.rs  config.rs  context_governor.rs  context_index.rs  data.rs  error.rs  evolution.rs  main.rs  metrics.rs  state.rs
backend/crates/harness-server/src/features/sessions/: attachments.rs  context.rs  mailbox.rs  metrics.rs  mod.rs
backend/crates/harness-server/src/routes/: agents.rs  approvals.rs  budget.rs  control.rs  data.rs  db.rs  events.rs  health.rs  knowledge.rs  mod.rs  profiles.rs  repos.rs  sessions.rs  spec.rs  ssh.rs  tasks.rs  threads.rs  transcript.rs
backend/crates/harness-server/src/sse/: hub.rs
backend/crates/harness-server/src/transcript/: claude.rs  codex.rs  event.rs  mod.rs  store.rs  watcher.rs
backend/crates/harness-session/: Cargo.toml
backend/crates/harness-session/src/: adapter.rs  detect.rs  errors.rs  kind.rs  lib.rs  mailbox.rs  manager.rs  meta.rs  output.rs  session.rs
backend/crates/module-db/: Cargo.toml
backend/crates/module-db/src/: error.rs  export.rs  lease.rs  lib.rs  manager.rs  pool.rs  query.rs  row.rs  schema.rs  storage.rs  structured.rs  types.rs  value.rs
backend/crates/module-db/tests/: postgres_integration.rs  sqlite_export.rs  sqlite_integration.rs
backend/crates/module-ssh/: Cargo.toml
backend/crates/module-ssh/src/: error.rs  lib.rs  manager.rs  storage.rs  types.rs
docs/: README.md  architecture.html  harness-architecture.excalidraw
docs/00-meta/: conventions.md  glossary.md  shard-format.md
docs/01-foundations/: anthropic-principles.md  design-tradeoffs.md  harness-concept.md  lessons-learned.md  openai-codex-architecture.md
docs/02-architecture/: ipc-protocol.md  layered-architecture.md  process-model.md  state-persistence.md  system-overview.md
docs/03-harness-core/: agent-loop.md  approval-flow.md  auth-and-config.md  context-compaction.md  mcp-integration.md  prompt-caching.md  prompt-construction.md  rust-crate-layout.md  sandbox.md  streaming-events.md  thread-lifecycle.md  tool-execution.md  turn-and-item-primitives.md
docs/04-app-server/: backward-compat.md  jsonrpc-transport.md  message-processor.md  overview.md  web-deployment.md
docs/05-frontend-shell/: event-stream-ui.md  routing-shell.md  state-store.md  sveltekit-integration.md  tauri-vs-app-server.md  tech-stack.md
docs/06-module-agents/: claude-cli-bootstrap.md  multi-agent.md  overview.md  session-pty.md
docs/07-module-db-manager/: connection-pool.md  overview.md  query-runner.md  schema-introspection.md  supported-engines.md  sveltekit-views.md
docs/08-module-ssh-manager/: overview.md  sessions-and-keys.md  sftp-transfer.md  ssh-backend.md  sveltekit-views.md  transfer-queue.md
docs/09-cross-cutting/: config-files.md  error-model.md  logging-tracing.md  profiles.md  security-model.md  telemetry.md  testing-strategy.md
docs/10-recipes/: add-frontend-route.md  add-mcp-server.md  bootstrap-new-tool.md  build-docs-site.md  use-crawl4ai-excalidraw-mcp.md
docs/11-references/: file-tree.md  rust-crates.md  sources.md
docs/12-build-plan/: decisions-locked.md  harness-analysis-2026-06-09.md  (+19 more)
experiments/slint-agents/: Cargo.toml  README.md  build.rs
experiments/slint-agents/src/: main.rs
experiments/slint-agents/ui/: agents.slint
frontend/: .dockerignore  .gitignore  .npmrc  .prettierignore  DESIGN.md  Dockerfile  eslint.config.js  package.json  playwright.config.ts  playwright.perf.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
scripts/: analyze-session-metrics.py  check-tauri-bundle.sh  dev-env.sh  dev-mcp.sh  dev-zellij.sh  run-session-ab-sample.py  session-context.sh  zellij-dev.kdl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+186 files in other folders)
