[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml_edit = { version = "0.22", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
fs2 = "0.4"
ts-rs = { version = "9", features = ["chrono-impl"] }
schemars = { version = "0.8", features = ["chrono"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
