[workspace]
resolver = "2"
members = ["crates/harness-server", "crates/harness-core", "crates/harness-session", "crates/harness-mcp-server", "crates/module-db", "crates/module-ssh", "crates/harness-policy"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ts-rs = { version = "9", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
portable-pty = "0.8"
dashmap = "6"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
zstd = "0.13"
which = "6"
dirs = "5"
toml_edit = { version = "0.22", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
fs2 = "0.4"
schemars = { version = "0.8", features = ["chrono"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql", "macros", "chrono", "uuid", "rust_decimal", "json"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
rust_decimal = { version = "1", features = ["serde"] }
regex = "1"
once_cell = "1"
gix = { version = "0.84", default-features = false, features = ["revision"] }
gix-hash = { version = "0.25", default-features = false, features = ["sha1"] }
tokei = { version = "14", default-features = false }
