[package]
name = "harness-slint-agents"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
slint = "1.16.1"
ureq = { version = "2", features = ["json"], default-features = false }

[build-dependencies]
slint-build = "1.16.1"
