[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
toml_edit.workspace = true
rusqlite.workspace = true
fs2.workspace = true
ts-rs = { workspace = true, optional = true }
schemars.workspace = true

[features]
default = []
ts-export = ["dep:ts-rs"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
