[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enables ts-rs derives so `cargo test --features ts-export` writes .ts files
# into `backend/bindings/`. Off by default to keep the production build slim.
ts-export = ["dep:ts-rs"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml_edit.workspace = true
rusqlite.workspace = true
fs2.workspace = true
schemars.workspace = true
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
