[package]
name = "harness-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }
gix = { workspace = true }
gix-hash = { workspace = true }
tokei = { workspace = true }
harness-core = { path = "../harness-core" }
harness-policy = { path = "../harness-policy" }
module-db = { path = "../module-db" }
module-ssh = { path = "../module-ssh" }
tokio = { workspace = true }
sha2 = "0.10"
tempfile = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# Tiny sync HTTP client used to ping the harness-server when an agent creates
# a task via MCP — keeps the in-process broadcast bus (and SSE consumers) in
# sync without polling the filesystem.
ureq = { version = "2", features = ["json"], default-features = false }

[[bin]]
name = "harness-mcp-server"
path = "src/main.rs"
