[package]
name = "harness-policy"
edition.workspace = true
version.workspace = true

[features]
ts-export = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true, optional = true }
