[package]
name = "harness-sandbox"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
libc = { workspace = true }
seccompiler = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
