[package]
name = "harness-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
async-stream = "0.3"

[[bin]]
name = "harness-server"
path = "src/main.rs"
