[package]
name = "harness-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "harness-server"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
harness-session = { path = "../harness-session" }
module-db = { path = "../module-db" }

axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
bytes = "1"
sha2 = "0.10"
tempfile = "3"
