[package]
name = "harness-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ts-export = ["dep:ts-rs", "harness-core/ts-export", "harness-policy/ts-export"]

[[bin]]
name = "harness-server"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
harness-policy = { path = "../harness-policy" }
harness-session = { path = "../harness-session" }
module-db = { path = "../module-db" }
module-ssh = { path = "../module-ssh" }

axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
toml_edit = { workspace = true }
bytes = "1"
sha2 = { workspace = true }
zstd = { workspace = true }
tempfile = "3"
rayon = { workspace = true }
ts-rs = { workspace = true, optional = true }
rusqlite = { workspace = true }
csv = { workspace = true }
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
