[package]
name = "harness-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts-export = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
zstd = { workspace = true }
ts-rs = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
