[package]
name = "module-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts-export = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
ts-rs = { workspace = true, optional = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
harness-sandbox = { path = "../harness-sandbox" }

[dev-dependencies]
tempfile = "3"
